<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="./MgrActivity" >

    <ImageView
        android:id="@+id/btn_server_setting"
        android:layout_width="@dimen/common_btn_height"
        android:layout_height="@dimen/common_btn_height"
        android:layout_gravity="right"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        android:onClick="onViewClick"
        android:src="@drawable/setting" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="30dp"
        android:background="@color/background_color"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/input_meeting_id"
            android:textColor="@color/base_color"
            android:textSize="26sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_meeting_prompt"
            android:textColor="#AA000000"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/et_meetid"
            style="@style/CommonEditText"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/common_edit_height"
            android:layout_marginTop="20dp"
            android:hint="@string/meeting_id_prompt"
            android:inputType="number" />

        <Button
            android:id="@+id/btn_entermeeting"
            style="@style/CommonFillBtn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/common_btn_height"
            android:layout_marginTop="15dp"
            android:onClick="onViewClick"
            android:text="@string/enter_meeting" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="20dp"
            android:paddingRight="20dp" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="@android:color/darker_gray" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.3"
                android:gravity="center_horizontal"
                android:text="@string/or"
                android:textColor="@android:color/darker_gray" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="@android:color/darker_gray" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_createmeeting"
            style="@style/CommonFillBtn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/common_btn_height"
            android:onClick="onViewClick"
            android:text="@string/create_meeting" />

        <TextView
            android:id="@+id/tv_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:layout_marginTop="20dp"
            android:textColor="@color/base_color"
            android:textSize="20sp" />
    </LinearLayout>

</LinearLayout>