<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:orientation="vertical"
    tools:context=".SettingActivity" >

    <com.examples.common.TitleView
        android:id="@+id/view_titlebar"
        style="@style/TitleBar"
        android:gravity="center_vertical"
        app:titlebar_left_btn_src="@drawable/back"
        app:titlebar_right_btn_text="@string/save"
        app:titlebar_title_text="@string/setting" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp" >

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/et_corner_select_bg"
            android:orientation="horizontal"
            android:paddingLeft="10dp"
            android:paddingRight="10dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/server_addr"
                android:textColor="@color/base_color" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/colon"
                android:textColor="@color/base_color" />

            <EditText
                android:id="@+id/et_server"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@null"
                android:singleLine="true"
		android:textColor="@color/base_color" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/et_corner_select_bg"
            android:orientation="horizontal"
            android:paddingLeft="10dp"
            android:paddingRight="10dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/appid"
                android:textColor="@color/base_color" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/colon"
                android:textColor="@color/base_color" />

            <EditText
                android:id="@+id/et_appid"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@null"
                android:singleLine="true"
                android:textColor="@color/base_color" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/et_corner_select_bg"
            android:orientation="horizontal"
            android:paddingLeft="10dp"
            android:paddingRight="10dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/appsecret"
                android:textColor="@color/base_color" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/colon"
                android:textColor="@color/base_color" />

            <EditText
                android:id="@+id/et_appsecret"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@null"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textColor="@color/base_color" />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/et_corner_select_bg"
            android:orientation="horizontal"
            android:paddingLeft="10dp"
            android:paddingRight="10dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/datenc_type"
                android:textColor="@color/base_color" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/colon"
                android:textColor="@color/base_color" />

            <TextView
                android:id="@+id/tv_datenc_type"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="center_vertical"
                android:onClick="onViewClick"
                android:singleLine="true"
                android:textColor="@color/base_color" />
        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/btn_restore"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/btn_fill_bg"
        android:onClick="onViewClick"
        android:text="@string/resore"
        android:textColor="@android:color/white"
        android:textSize="20sp" />

</LinearLayout>