<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="180dp"
    android:layout_alignParentBottom="true"
    android:background="#FF162332"
    android:gravity="center_vertical"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal" >

        <LinearLayout
            android:id="@+id/btn_mic"
            style="@style/TextIconBtn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" >

            <ImageView
                android:id="@+id/iv_mic"
                android:layout_width="@dimen/text_icon_btn_icon_size"
                android:layout_height="@dimen/text_icon_btn_icon_size"
                android:src="@drawable/mic_closed" />

            <TextView
                android:id="@+id/tv_mic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/open_mic"
                android:textColor="@android:color/white"
                android:textSize="10sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/btn_camera"
            style="@style/TextIconBtn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" >

            <ImageView
                android:id="@+id/iv_camera"
                android:layout_width="@dimen/text_icon_btn_icon_size"
                android:layout_height="@dimen/text_icon_btn_icon_size"
                android:src="@drawable/camera_closed" />

            <TextView
                android:id="@+id/tv_camera"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/open_camera"
                android:textColor="@android:color/white"
                android:textSize="10sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/btn_im"
            style="@style/TextIconBtn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" >

            <ImageView
                android:layout_width="@dimen/text_icon_btn_icon_size"
                android:layout_height="@dimen/text_icon_btn_icon_size"
                android:src="@drawable/message" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/im"
                android:textColor="@android:color/white"
                android:textSize="10sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/btn_switchcamera"
            style="@style/TextIconBtn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" >

            <ImageView
                android:layout_width="@dimen/text_icon_btn_icon_size"
                android:layout_height="@dimen/text_icon_btn_icon_size"
                android:src="@drawable/camera_switch" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/switch_camera"
                android:textColor="@android:color/white"
                android:textSize="10sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal" >

        <LinearLayout
            android:id="@+id/btn_resolution"
            style="@style/TextIconBtn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" >

            <ImageView
                android:layout_width="@dimen/text_icon_btn_icon_size"
                android:layout_height="@dimen/text_icon_btn_icon_size"
                android:src="@drawable/video_resolution" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/video_resolution"
                android:textColor="@android:color/white"
                android:textSize="10sp" />
        </LinearLayout>

        <ImageView
            android:id="@+id/btn_exit_meeting"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:onClick="onViewClick"
            android:padding="20dp"
            android:src="@drawable/exit" />

        <LinearLayout
            android:id="@+id/btn_fps"
            style="@style/TextIconBtn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" >

            <ImageView
                android:layout_width="@dimen/text_icon_btn_icon_size"
                android:layout_height="@dimen/text_icon_btn_icon_size"
                android:src="@drawable/video_fps" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/video_fps"
                android:textColor="@android:color/white"
                android:textSize="10sp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>